--- a/action.html
+++ b/action.html
@@ -1980,6 +1980,188 @@
                         <h2>Товары, участвующие в акции</h2>
                     </div>
                     <div class="category__inner">
+                        <aside class="aside">
+                            <div class="aside__inner">
+                                <div class="filter">
+                                    <a class="filter-items__show-results blue" href="#" style="top: 50%;">
+                                        Показать
+                                    </a>
+                                    <h3 class="filter-title skeleton">
+                                        Фильтр
+                                    </h3>
+                                    <div class="filter-items">
+                                        <div class="filter-item check skeleton">
+                                            <div class="filter-item__props">
+                                                <ul class="filter-item__list">
+                                                    <li class="filter-item__value">
+                                                        <input type="checkbox" id="filter1">
+                                                        <label class="filter-item__label" for="filter1">
+                                                            <span>В наличии - доставим сегодня</span>
+                                                            <span class="filter-count"></span>
+                                                        </label>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                        <div class="filter-item check skeleton">
+                                            <div class="filter-item__props">
+                                                <ul class="filter-item__list">
+                                                    <li class="filter-item__value">
+                                                        <input type="checkbox" id="filter2">
+                                                        <label class="filter-item__label" for="filter2">
+                                                            <span>Новинка</span>
+                                                            <span class="filter-count"></span>
+                                                        </label>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                        <div class="filter-item range skeleton">
+                                            <button class="filter-item__header">
+                                                Цена
+                                            </button>
+                                            <div class="filter-item__props">
+                                                <ul class="filter-item__list">
+                                                    <li class="filter-item__value">
+                                                        <div class="filter-item__slider"></div>
+                                                        <div class="filter-item__inputs">
+                                                            <input class="filter-item__input" type="number" min="0"
+                                                                max="99999999" placeholder="">
+                                                            <div class="divider">—</div>
+                                                            <input class="filter-item__input" type="number" min="0"
+                                                                max="99999999" placeholder="">
+                                                        </div>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                        <div class="filter-item values skeleton">
+                                            <button class="filter-item__header">
+                                                Тип монтажа
+                                            </button>
+                                            <div class="filter-item__props">
+                                                <ul class="filter-item__list">
+                                                    <li class="filter-item__value">
+                                                        <input type="checkbox" id="filter3">
+                                                        <label class="filter-item__label" for="filter3">
+                                                            <span>Врезная</span>
+                                                            <span class="filter-count">391</span>
+                                                        </label>
+                                                    </li>
+                                                    <li class="filter-item__value">
+                                                        <input type="checkbox" id="filter4">
+                                                        <label class="filter-item__label" for="filter4">
+                                                            <span>Под столешницу</span>
+                                                            <span class="filter-count">187</span>
+                                                        </label>
+                                                    </li>
+                                                    <li class="filter-item__value">
+                                                        <input type="checkbox" id="filter5">
+                                                        <label class="filter-item__label" for="filter5">
+                                                            <span>Накладная</span>
+                                                            <span class="filter-count">101</span>
+                                                        </label>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                        <div class="filter-item values collapse skeleton">
+                                            <button class="filter-item__header">
+                                                Цвет
+                                            </button>
+                                            <div class="filter-item__props">
+                                                <ul class="filter-item__list">
+                                                    <li class="filter-item__value">
+                                                        <input type="checkbox" id="filter6">
+                                                        <label class="filter-item__label" for="filter6">
+                                                            <span>Черный</span>
+                                                            <span class="filter-count">391</span>
+                                                        </label>
+                                                    </li>
+                                                    <li class="filter-item__value">
+                                                        <input type="checkbox" id="filter7">
+                                                        <label class="filter-item__label" for="filter7">
+                                                            <span>Белый</span>
+                                                            <span class="filter-count">187</span>
+                                                        </label>
+                                                    </li>
+                                                    <li class="filter-item__value">
+                                                        <input type="checkbox" id="filter8">
+                                                        <label class="filter-item__label" for="filter8">
+                                                            <span>Бежевый</span>
+                                                            <span class="filter-count">101</span>
+                                                        </label>
+                                                    </li>
+                                                    <li class="filter-item__value">
+                                                        <input type="checkbox" id="filter9">
+                                                        <label class="filter-item__label" for="filter9">
+                                                            <span>Бежевый</span>
+                                                            <span class="filter-count">101</span>
+                                                        </label>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <button class="filter-item__footer">
+                                                Больше
+                                            </button>
+                                        </div>
+                                        <div class="filter-item range skeleton">
+                                            <button class="filter-item__header">
+                                                Ширина встраивания
+                                            </button>
+                                            <div class="filter-item__props">
+                                                <ul class="filter-item__list">
+                                                    <li class="filter-item__value">
+                                                        <div class="filter-item__slider"></div>
+                                                        <div class="filter-item__inputs">
+                                                            <input class="filter-item__input" type="number" min="0"
+                                                                max="99999999" placeholder="">
+                                                            <div class="divider">—</div>
+                                                            <input class="filter-item__input" type="number" min="0"
+                                                                max="99999999" placeholder="">
+                                                        </div>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <button class="oval-btn oval-btn--filter show blue skeleton">
+                                        Показать
+                                    </button>
+                                    <button class="oval-btn oval-btn--filter reset transparent skeleton">
+                                        Сбросить
+                                    </button>
+                                </div>
+                                <div class="category__promo skeleton">
+                                    <div class="promo-box">
+                                        <div class="promo-box__header">
+                                            <h4 class="promo-box__title">
+                                                Товар месяца
+                                            </h4>
+                                        </div>
+                                        <a class="promo-box__content" href="./product.html">
+                                            <div class="promo-box__img">
+                                                <img src="" alt="">
+                                            </div>
+                                            <div class="promo-box__descr">
+                                                <p>
+                                                    GERDA 6045G
+                                                </p>
+                                                <p class="promo-box__price">
+                                                    29 900 ₽
+                                                </p>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <button class="promo-feedback feedback">
+                                        <img src="./img/woman.png" alt="">
+                                        <p>Задать вопрос менеджеру</p>
+                                    </button>
+                                </div>
+                            </div>
+
+                        </aside>
                         <div class="products">
                             <div class="products__header ">
                                 <div class="products__header-mobile-btn">
