--- a/category.html
+++ b/category.html
@@ -1992,8 +1992,9 @@
                             target="_blank" aria-label="Перейти в ВК сообщество компании">
                             <img src="./img/icons/footer/vk.svg" alt="">
                         </a>
-                        <a class="header-menu-link round-btn round-btn--header-menu youtube" href="https://www.youtube.com/@ekromtech"
-                            aria-label="Перейти на YouTube-канал компании" target="_blank">
+                        <a class="header-menu-link round-btn round-btn--header-menu youtube"
+                            href="https://www.youtube.com/@ekromtech" aria-label="Перейти на YouTube-канал компании"
+                            target="_blank">
                             <img src="./img/icons/footer/youtube.svg" alt="">
                         </a>
                         <a class="header-menu-link round-btn round-btn--header-menu telegram"
@@ -2062,7 +2063,16 @@
                 <div class="container">
                     <div class="category__inner">
                         <aside class="aside">
+
                             <div class="aside__inner">
+                                <button class="aside__inner-close-btn close-btn close-btn--aside">
+                                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M6.46583 9.99906L0.733148 4.26638C-0.244383 3.29135 -0.244383 1.7063 0.733148 0.731273C1.70818 -0.243758 3.29323 -0.243758 4.26826 0.731273L10.0009 6.46395L15.7336 0.731273C16.7086 -0.243758 18.2937 -0.243758 19.2687 0.731273C20.2438 1.7063 20.2438 3.29135 19.2687 4.26638L13.536 9.99906L19.2687 15.7317C20.2438 16.7068 20.2438 18.2918 19.2687 19.2669C18.2937 20.2419 16.7086 20.2419 15.7336 19.2669L10.0009 13.5342L4.26826 19.2669C3.29323 20.2419 1.70818 20.2419 0.733148 19.2669C-0.244383 18.2918 -0.244383 16.7068 0.733148 15.7317L6.46583 9.99906Z"
+                                            fill="white" />
+                                    </svg>
+                                </button>
                                 <div class="filter">
                                     <a class="filter-items__show-results blue" href="#" style="top: 50%;">
                                         Показать
@@ -9482,8 +9492,9 @@
                                 aria-label="Перейти в ВК сообщество компании">
                                 <img src="./img/icons/footer/vk.svg" alt="">
                             </a>
-                            <a class="footer__socials-link round-btn round-btn--footer youtube" href="https://www.youtube.com/@ekromtech"
-                                aria-label="Перейти на YouTube-канал компании" target="_blank">
+                            <a class="footer__socials-link round-btn round-btn--footer youtube"
+                                href="https://www.youtube.com/@ekromtech" aria-label="Перейти на YouTube-канал компании"
+                                target="_blank">
                                 <img src="./img/icons/footer/youtube.svg" alt="">
                             </a>
                             <a class="footer__socials-link round-btn round-btn--footer telegram"
@@ -9770,9 +9781,9 @@
                                                 d="M14.6671 14.7H3.15024C1.76888 14.7 0.653809 13.5834 0.653809 12.2V9.43335"
                                                 stroke="#537CE5" stroke-width="1.2" stroke-miterlimit="10"
                                                 stroke-linecap="round" stroke-linejoin="round" />
-                                            <path d="M12.0376 17.3333L14.6671 14.7L12.0376 12.0667"
-                                                stroke="#537CE5" stroke-width="1.2" stroke-miterlimit="10"
-                                                stroke-linecap="round" stroke-linejoin="round" />
+                                            <path d="M12.0376 17.3333L14.6671 14.7L12.0376 12.0667" stroke="#537CE5"
+                                                stroke-width="1.2" stroke-miterlimit="10" stroke-linecap="round"
+                                                stroke-linejoin="round" />
                                         </svg>
                                     </button>
                                 </div>
@@ -10248,7 +10259,7 @@
                     Регистрация
                 </h4>
                 <p class="auth__text">
-                    Ваш аккаунт успешно создан! 
+                    Ваш аккаунт успешно создан!
                 </p>
                 <a class="rect-btn rect-btn--auth-register blue" href="./catalog.html">
                     К покупкам
@@ -10296,7 +10307,7 @@
                             Забыли пароль?
                         </a>
                     </div>
-                    
+
                     <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Войти
                     </button>
@@ -10316,7 +10327,8 @@
                     Восстановление пароля
                 </h4>
                 <p class="auth__text">
-                    Укажите адрес электронной почты, который вы использовали при регистрации. Мы вышлем на него инструкцию по восстановлению пароля
+                    Укажите адрес электронной почты, который вы использовали при регистрации. Мы вышлем на него
+                    инструкцию по восстановлению пароля
                 </p>
                 <form class="auth__form auth__form--recover" action="#">
                     <div class="auth__form-group">
@@ -10406,10 +10418,11 @@
                             d="M17.6977 8.04688L16.1771 6.66134V2.06701C16.1771 1.77469 15.9401 1.53767 15.6477 1.53767H11.9874C11.6951 1.53767 11.4581 1.77465 11.4581 2.06701V2.36141L9.62166 0.68808C9.26718 0.365029 8.73263 0.365064 8.37829 0.688045L0.302268 8.04692C0.0183462 8.30567 -0.0754858 8.70434 0.0632407 9.06254C0.202002 9.42075 0.539854 9.65219 0.924006 9.65219H2.21385V17.0252C2.21385 17.3175 2.45084 17.5545 2.7432 17.5545H7.16983C7.46215 17.5545 7.69918 17.3175 7.69918 17.0252V12.5485H10.3008V17.0252C10.3008 17.3175 10.5378 17.5546 10.8301 17.5546H15.2566C15.5489 17.5546 15.7859 17.3176 15.7859 17.0252V9.65222H17.076C17.4601 9.65222 17.798 9.42075 17.9368 9.06258C18.0755 8.70434 17.9817 8.30567 17.6977 8.04688ZM15.2566 8.59352C14.9643 8.59352 14.7272 8.83051 14.7272 9.12287V16.4959H11.3595V12.0192C11.3595 11.7269 11.1225 11.4898 10.8302 11.4898H7.16983C6.87751 11.4898 6.64048 11.7268 6.64048 12.0192V16.4959H3.27251V9.12287C3.27251 8.83055 3.03553 8.59352 2.74317 8.59352H1.27423L9.00003 1.55384L11.631 3.95118C11.786 4.09237 12.0097 4.12875 12.2014 4.04413C12.3931 3.9594 12.5168 3.76949 12.5168 3.55989V2.59636H15.1184V6.89513C15.1184 7.04408 15.1812 7.18608 15.2913 7.28642L16.7258 8.59352H15.2566Z"
                             fill="#fff" />
                     </svg>
+                    <span>Главная</span>
                 </a>
             </li>
             <li class="mobile-bottom-menu__item">
-                <a href="./auth.html">
+                <a href="./personal.html">
                     <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M9 9C11.0711 9 12.75 7.32107 12.75 5.25C12.75 3.17893 11.0711 1.5 9 1.5C6.92893 1.5 5.25 3.17893 5.25 5.25C5.25 7.32107 6.92893 9 9 9Z"
@@ -10418,6 +10431,7 @@
                             d="M15.4426 16.5C15.4426 13.5975 12.5551 11.25 9.00011 11.25C5.44511 11.25 2.55762 13.5975 2.55762 16.5"
                             stroke="white" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" />
                     </svg>
+                    <span>Кабинет</span>
                 </a>
             </li>
             <li class="mobile-bottom-menu__item">
@@ -10436,6 +10450,7 @@
                             d="M2.625 7.5L3.6825 13.98C3.9225 15.435 4.5 16.5 6.645 16.5H11.1675C13.5 16.5 13.845 15.48 14.115 14.07L15.375 7.5"
                             stroke="white" stroke-width="1.2" stroke-linecap="round" />
                     </svg>
+                    <span>Корзина</span>
                 </a>
             </li>
             <li class="mobile-bottom-menu__item">
@@ -10445,6 +10460,7 @@
                             d="M9.465 14.6077C9.21 14.6977 8.79 14.6977 8.535 14.6077C6.36 13.8652 1.5 10.7677 1.5 5.5177C1.5 3.2002 3.3675 1.3252 5.67 1.3252C7.035 1.3252 8.2425 1.9852 9 3.0052C9.7575 1.9852 10.9725 1.3252 12.33 1.3252C14.6325 1.3252 16.5 3.2002 16.5 5.5177C16.5 10.7677 11.64 13.8652 9.465 14.6077Z"
                             stroke="white" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" />
                     </svg>
+                    <span>Избранное</span>
                 </a>
             </li>
             <li class="mobile-bottom-menu__item">
@@ -10461,6 +10477,7 @@
                         <path d="M10.9443 16.4998L13.3143 14.1298L10.9443 11.7598" stroke="white" stroke-width="1.2"
                             stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
                     </svg>
+                    <span>Сравнение</span>
                 </a>
             </li>
         </ul>
